# bk-lite

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  Makefile  Readme.md  dev.sh  docker-compose.dev.yml  fix_probe.sh
metis/: .coveragerc  .gitignore  Makefile  VERSION.md  config.yml  dev.py  pyproject.toml  pytest.ini  server.py  simple_test.py  test_backward_compatibility.py  test_new_lats_sse.py  test_sse_encoding.py
metis/.github/: copilot-instructions.md
metis/.github/prompts/: copilot-review.prompt.md
metis/docs/: advanced_anomaly_detection_guide.md
metis/graphiti_core/llm_client/: openai_base_client.py  openai_client.py
metis/graphiti_core/utils/maintenance/: community_operations.py  node_operations.py
metis/mlruns/0/: meta.yaml
metis/mlruns/719895097690912898/: meta.yaml
metis/requirements/: requirements-dev.in  requirements.in
metis/src/agent/chatbot_workflow/: chatbot_workflow_graph.py  chatbot_workflow_node.py  chatbot_workflow_state.py
metis/src/agent/lats_agent/: lats_agent_graph.py  lats_agent_node.py  lats_agent_state.py
metis/src/agent/plan_and_execute_agent/: plan_and_execute_agent_graph.py  plan_and_execute_agent_node.py  plan_and_execute_agent_state.py
metis/src/agent/react_agent/: react_agent_graph.py  react_agent_node.py  react_agent_state.py
metis/src/anomaly_detection/: base_anomaly_detection.py  random_forest_detector.py  unsupervised_iforest_detector.py  xgbod_detector.py
metis/src/api/: __init__.py  agent_api.py  anomaly_detection_api.py  rag_api.py
metis/src/api/agent/: base_agent.py  utils.py  (+12 more)
metis/src/chunk/: __init__.py  base_chunk.py  fixed_size_chunk.py
metis/src/embed/: embed_builder.py
metis/src/enhance/: qa_enhance.py
metis/src/loader/: doc_loader.py  excel_loader.py  image_loader.py  pdf_loader.py  ppt_loader.py  text_loader.py  website_loader.py
metis/src/mlops/: mlops_utils.py
metis/src/ocr/: azure_ocr.py  pp_ocr.py
metis/src/rag/: base_rag.py
metis/src/rerank/: bce_rerank.py  rerank_manager.py
metis/src/services/: agent_service.py  qa_enhance_service.py  rag_service.py
metis/src/summarize/: summarize_manager.py
metis/src/tools/: ansible_tools.py  duckduckgo_tools.py  http_request_tools.py  playwright_tools.py  python_tools.py  tools_loader.py
metis/support-files/: Dockerfile  Dockerfile.base  service.conf
metis/tests/agent/: chatbot_workflow_test.py  lats_agent_test.py  plan_and_execute_agent_test.py  react_agent_test.py
metis/tests/anomaly_detection/: test_detector.py
metis/tests/assert/: anomaly_detection_test_randomforest.csv  anomaly_detection_train_randomforest.csv  content.txt
metis/tests/chunk/: fixed_size_chunk_test.py  recursive_chunk_test.py  semantic_chunk_test.py
metis/tests/core/: crypto_test.py  test_structured_output_parser.py
metis/tests/embed/: embed_test.py
metis/tests/enhance/: qa_enhance_test.py
metis/tests/loader/: doc_loader_test.py  excel_loader_test.py  image_loader_test.py  markdown_loader_test.py  pdf_loader_test.py  ppt_loader_test.py  text_loader_test.py  website_loader_test.py
metis/tests/ocr/: azure_ocr_test.py  olm_ocr_test.py  pp_ocr_test.py
metis/tests/rag/: elasticsearch_native_rag_test.py  graphiti_rag_test.py  reranker_test.py
metis/tests/rerank/: bce_rerank_test.py  rerank_manager_test.py
metis/tests/summarize/: textrank_test.py
metis/tests/tools/: ansible_tools_test.py  current_time_tools_test.py  http_requset_tools_test.py  jenkins_tools_test.py  kubernetes_tools_test.py  python_tools_test.py  time_tools_test.py  tools_loader_test.py
metis/utils/: template_loader.py
neco/: .gitignore  MANIFEST.in  Makefile  Version.md  pyproject.toml  pytest.ini
neco/neco/ocr/: azure_ocr.py  ocr_manager.py  pp_ocr.py
neco/tests/llm/: chatbot_agent_test.py  lats_agent_test.py  plan_and_execute_agent_test.py  react_agent_test.py
server/: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  pytest.ini  remove_swagger.py  settings.py  urls.py
server/.github/: copilot-instructions.md
server/.github/instructions/: checklist.instructions.md  coding-styles.instructions.md  forbiddens.instructions.md  libs.instructions.md  principle.instructions.md  role.instructions.md
server/.github/prompts/: code-review.prompt.md
server/apps/alerts/: __init__.py  admin.py  apps.py  celery_tasks.py  config.py  constants.py  error.py  filters.py  init_constants.py  models.py  nats.py  tasks.py  tests.py  urls.py
server/apps/cmdb/: README.md  apps.py  celery_tasks.py  config.py  constants.py  nats.py  permission.py  urls.py
server/apps/core/: backends.py  celery.py  logger.py  mixinx.py  urls.py
server/apps/lab/: urls.py
server/apps/log/: apps.py  constants.py  urls.py
server/apps/mlops/: to_yaml.py  urls.py
server/apps/monitor/: apps.py  constants.py  nats.py  urls.py
server/apps/node_mgmt/: apps.py  constants.py  urls.py
server/apps/operation_analysis/: __init__.py  apps.py  config.py  constants.py  filters.py  init_constants.py  models.py  nats.py  rpc.py  serializers.py  tasks.py  tests.py  urls.py  utils.py
server/apps/opspilot/: apps.py  config.py  enum.py  nats_api.py  tasks.py  urls.py  views.py
server/apps/playground/: init_constant.py  urls.py
server/apps/rpc/: alerts.py  base.py  cmdb.py  executor.py  jetstream.py  log.py  monitor.py  node_mgmt.py  opspilot.py  stargazer.py  system_mgmt.py
server/apps/system_mgmt/: guest_menus.py  nats_api.py  opspilot_menus.py  tasks.py  urls.py
server/config/: default.py
server/config/components/: app.py  base.py  cache.py  celery.py  container.py  docker_simple.py  extra.py  log.py  mlflow.py  nats.py
server/config/drf/: serializers.py  viewsets.py
server/nats_client/: clients.py
server/requirements/: requirements-cmdb.txt  requirements-core.txt  requirements-mlops.txt  requirements-opspilot.txt  requirements-system_mgmt.txt
server/scripts/: who_is_big.py
server/support-files/docker/: system.sh
server/support-files/env/: .env.opspilot.example  .env.system_mgmt.example
server/support-files/release/: Dockerfile  startup.sh
server/templates/: index.html
(+2997 files in other folders)
